--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale-1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>أكاديمية أبقراط للتدريب - الملف التعريفي</title>
     <link rel="icon" type="image/png" href="https://i.imgur.com/vEQQB9o.png">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -197,6 +197,45 @@
                 </div>
             </section>
 
+            <section id="stats" class="mb-24 reveal">
+                <h2 class="section-title">
+                    <span data-lang="ar">بالأرقام</span>
+                    <span data-lang="en" class="hidden">By The Numbers</span>
+                </h2>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                    <div class="card p-8 text-center reveal" style="transition-delay: 100ms; background-image: radial-gradient(circle at 10% 10%, rgba(99, 102, 241, 0.1), transparent 50%);">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mx-auto mb-4 text-indigo-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0z" />
+                        </svg>
+                        <h3 class="text-5xl font-extrabold text-white"><span class="counter" data-target="1500">0</span>+</h3>
+                        <p class="text-gray-400 text-lg mt-2">
+                            <span data-lang="ar">متدرب</span>
+                            <span data-lang="en" class="hidden">Trainees</span>
+                        </p>
+                    </div>
+                    <div class="card p-8 text-center reveal" style="transition-delay: 200ms; background-image: radial-gradient(circle at 50% 10%, rgba(99, 102, 241, 0.1), transparent 50%);">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mx-auto mb-4 text-indigo-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
+                        </svg>
+                        <h3 class="text-5xl font-extrabold text-white"><span class="counter" data-target="50">0</span>+</h3>
+                        <p class="text-gray-400 text-lg mt-2">
+                            <span data-lang="ar">دورة تدريبية</span>
+                            <span data-lang="en" class="hidden">Training Courses</span>
+                        </p>
+                    </div>
+                    <div class="card p-8 text-center reveal" style="transition-delay: 300ms; background-image: radial-gradient(circle at 90% 10%, rgba(99, 102, 241, 0.1), transparent 50%);">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mx-auto mb-4 text-indigo-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                          <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z" />
+                        </svg>
+                        <h3 class="text-5xl font-extrabold text-white"><span class="counter" data-target="1200">0</span>+</h3>
+                        <p class="text-gray-400 text-lg mt-2">
+                            <span data-lang="ar">شهادة معتمدة</span>
+                            <span data-lang="en" class="hidden">Certified Certificates</span>
+                        </p>
+                    </div>
+                </div>
+            </section>
+
             <section id="vision" class="mb-24 reveal">
                 <h2 class="section-title">
                     <span data-lang="ar">الرؤية والرسالة</span>
@@ -261,6 +300,95 @@
                     <div class="card text-center reveal" style="transition-delay: 400ms;">
                         <h3 class="text-xl font-bold mb-3 text-indigo-400"><span data-lang="ar">بناء الشراكات</span><span data-lang="en" class="hidden">Building Partnerships</span></h3>
                         <p class="text-gray-400"><span data-lang="ar">بناء شراكات مع مؤسسات محلية وإقليمية ودولية لتبادل الخبرات.</span><span data-lang="en" class="hidden">Building partnerships with local, regional, and international institutions.</span></p>
+                    </div>
+                </div>
+            </section>
+
+            <section id="why-us" class="mb-24 reveal">
+                <h2 class="section-title">
+                    <span data-lang="ar">لماذا تختارنا؟</span>
+                    <span data-lang="en" class="hidden">Why Choose Us?</span>
+                </h2>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                    <!-- Item 1 -->
+                    <div class="flex items-start space-x-4 rtl:space-x-reverse p-6 bg-gray-800/50 rounded-lg">
+                        <div class="flex-shrink-0">
+                            <div class="flex items-center justify-center h-12 w-12 rounded-full bg-indigo-500 text-white">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                  <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="text-start">
+                            <h3 class="text-xl font-bold text-white mb-2">
+                                <span data-lang="ar">برامج معتمدة</span>
+                                <span data-lang="en" class="hidden">Accredited Programs</span>
+                            </h3>
+                            <p class="text-gray-400">
+                                <span data-lang="ar">نقدم برامج معتمدة للتطوير المهني المستمر.</span>
+                                <span data-lang="en" class="hidden">We offer accredited programs for continuous professional development.</span>
+                            </p>
+                        </div>
+                    </div>
+                    <!-- Item 2 -->
+                    <div class="flex items-start space-x-4 rtl:space-x-reverse p-6 bg-gray-800/50 rounded-lg">
+                        <div class="flex-shrink-0">
+                            <div class="flex items-center justify-center h-12 w-12 rounded-full bg-indigo-500 text-white">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                  <path stroke-linecap="round" stroke-linejoin="round" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0z" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="text-start">
+                            <h3 class="text-xl font-bold text-white mb-2">
+                                <span data-lang="ar">محاضرون خبراء</span>
+                                <span data-lang="en" class="hidden">Expert Lecturers</span>
+                            </h3>
+                            <p class="text-gray-400">
+                                <span data-lang="ar">يتم تقديم الدورات من قبل محاضرين خبراء وممارسين في مجالاتهم.</span>
+                                <span data-lang="en" class="hidden">Courses are delivered by expert and practicing lecturers in their fields.</span>
+                            </p>
+                        </div>
+                    </div>
+                    <!-- Item 3 -->
+                    <div class="flex items-start space-x-4 rtl:space-x-reverse p-6 bg-gray-800/50 rounded-lg">
+                        <div class="flex-shrink-0">
+                            <div class="flex items-center justify-center h-12 w-12 rounded-full bg-indigo-500 text-white">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                  <path stroke-linecap="round" stroke-linejoin="round" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="text-start">
+                            <h3 class="text-xl font-bold text-white mb-2">
+                                <span data-lang="ar">تعلم تفاعلي</span>
+                                <span data-lang="en" class="hidden">Interactive Learning</span>
+                            </h3>
+                            <p class="text-gray-400">
+                                <span data-lang="ar">نعتمد على أساليب تعلم تفاعلية ومحاكاة واقعية لتعزيز المهارات.</span>
+                                <span data-lang="en" class="hidden">We rely on interactive learning methods and realistic simulations to enhance skills.</span>
+                            </p>
+                        </div>
+                    </div>
+                    <!-- Item 4 -->
+                    <div class="flex items-start space-x-4 rtl:space-x-reverse p-6 bg-gray-800/50 rounded-lg">
+                        <div class="flex-shrink-0">
+                            <div class="flex items-center justify-center h-12 w-12 rounded-full bg-indigo-500 text-white">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                  <path stroke-linecap="round" stroke-linejoin="round" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2h8a2 2 0 002-2v-1a2 2 0 012-2h1.945M7.737 10.512A4.501 4.501 0 0112 8.25c2.43 0 4.438 1.969 4.438 4.438s-1.969 4.438-4.438 4.438a4.501 4.501 0 01-4.263-2.737M6.5 21h11a2 2 0 002-2V5a2 2 0 00-2-2h-11a2 2 0 00-2 2v14a2 2 0 002 2z" />
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="text-start">
+                            <h3 class="text-xl font-bold text-white mb-2">
+                                <span data-lang="ar">شهادات معترف بها</span>
+                                <span data-lang="en" class="hidden">Recognized Certificates</span>
+                            </h3>
+                            <p class="text-gray-400">
+                                <span data-lang="ar">شهاداتنا معترف بها دوليًا وتدعم مسيرتك المهنية.</span>
+                                <span data-lang="en" class="hidden">Our certificates are internationally recognized and support your career path.</span>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -344,6 +472,24 @@
                         <div class="flex justify-center items-center"><img src="https://i.imgur.com/ZEo7cav.png" alt="شعار Fascia MTC" class="max-h-20 w-auto object-contain filter grayscale hover:grayscale-0 transition-all duration-300 transform hover:scale-110"></div>
                         <div class="flex justify-center items-center"><img src="https://i.imgur.com/eFyxRUZ.png" alt="شعار Orthopaedic Manual Therapy Certificate" class="max-h-20 w-auto object-contain filter grayscale hover:grayscale-0 transition-all duration-300 transform hover:scale-110"></div>
                         <div class="flex justify-center items-center"><img src="https://i.imgur.com/bCnd61T.png" alt="شعار Primephysio Training" class="max-h-20 w-auto object-contain filter grayscale hover:grayscale-0 transition-all duration-300 transform hover:scale-110"></div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="mb-24 reveal">
+                <div class="container mx-auto px-6">
+                    <div class="bg-gradient-to-r from-indigo-600 to-purple-700 rounded-lg p-8 md:p-12 text-center shadow-2xl transform hover:scale-[1.02] transition-transform duration-500">
+                        <h2 class="text-3xl md:text-4xl font-extrabold text-white mb-4">
+                            <span data-lang="ar">ابدأ رحلتك في تطوير مهاراتك</span>
+                            <span data-lang="en" class="hidden">Start Your Skill Development Journey</span>
+                        </h2>
+                        <a href="https://api.whatsapp.com/send/?phone=962787269996&text&type=phone_number&app_absent=0" target="_blank" rel="noopener noreferrer" class="mt-6 inline-flex items-center bg-white text-indigo-600 font-bold py-3 px-8 rounded-full hover:bg-gray-200 transition-transform transform hover:scale-110 shadow-lg">
+                            <span data-lang="ar">تواصل معنا الآن</span>
+                            <span data-lang="en" class="hidden">Contact Us Now</span>
+                            <svg class="w-6 h-6 ms-3" fill="currentColor" viewBox="0 0 448 512">
+                                <path d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 221.9-99.6 221.9-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.8 0-67.6-9.2-97.2-26.4l-6.9-4-72.1 18.9 19.3-70.4-4.4-7.2c-18.3-29.7-28-64.2-28-99.8 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-82.8 184.6-184.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"/>
+                            </svg>
+                        </a>
                     </div>
                 </div>
             </section>
@@ -437,6 +583,48 @@
             revealObserver.observe(element);
         });
 
+        // Counter Animation Logic
+        const statsSection = document.getElementById('stats');
+        const counters = document.querySelectorAll('.counter');
+        let hasAnimatedCounters = false;
+
+        const animateCounters = () => {
+            counters.forEach(counter => {
+                const target = +counter.getAttribute('data-target');
+                const duration = 2000; // Animation duration in milliseconds
+                
+                let start = 0;
+                const step = timestamp => {
+                    if (!start) start = timestamp;
+                    const progress = timestamp - start;
+                    const current = Math.min(Math.floor(progress / duration * target), target);
+                    counter.innerText = current.toLocaleString();
+                    if (progress < duration) {
+                        window.requestAnimationFrame(step);
+                    } else {
+                        counter.innerText = target.toLocaleString();
+                    }
+                };
+                window.requestAnimationFrame(step);
+            });
+        };
+
+        const statsObserver = new IntersectionObserver((entries, observer) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting && !hasAnimatedCounters) {
+                    animateCounters();
+                    hasAnimatedCounters = true;
+                    observer.unobserve(entry.target);
+                }
+            });
+        }, {
+            threshold: 0.4
+        });
+
+        if (statsSection) {
+            statsObserver.observe(statsSection);
+        }
+
         // Language Switcher Logic
         const langSwitcherButtons = [document.getElementById('lang-switcher'), document.getElementById('mobile-lang-switcher')];
         let currentLang = localStorage.getItem('preferredLang') || 'ar';
@@ -500,4 +688,5 @@
 
 </body>
 </html>
+"
 
