--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@
                             <span data-lang="en" class="hidden">Accredited Programs</span>
                         </h3>
                         <p class="text-gray-600">
-                            <span data-lang="ar">نقدم برامج معتمدة للتطوير المهني المستمر.</span>
-                            <span data-lang="en" class="hidden">We offer accredited programs for continuous professional development.</span>
+                            <span data-lang="ar">برامج معتمدة للتطوير المهني المستمر.</span>
+                            <span data-lang="en" class="hidden">Accredited programs for continuous professional development.</span>
                         </p>
                     </div>
                     <!-- Item 2 -->
@@ -386,16 +386,14 @@
                               <path stroke-linecap="round" stroke-linejoin="round" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0z" />
                             </svg>
                         </div>
-                        <div class="text-start">
-                            <h3 class="text-xl font-bold mb-2" style="color: var(--primary-dark-blue);">
-                                <span data-lang="ar">محاضرون خبراء</span>
-                                <span data-lang="en" class="hidden">Expert Lecturers</span>
-                            </h3>
-                            <p class="text-gray-600">
-                                <span data-lang="ar">يتم تقديم الدورات من قبل محاضرين خبراء وممارسين في مجالاتهم.</span>
-                                <span data-lang="en" class="hidden">Courses are delivered by expert and practicing lecturers in their fields.</span>
-                            </p>
-                        </div>
+                        <h3 class="text-xl font-bold mb-2" style="color: var(--primary-dark-blue);">
+                            <span data-lang="ar">محاضرون خبراء</span>
+                            <span data-lang="en" class="hidden">Expert Lecturers</span>
+                        </h3>
+                        <p class="text-gray-600">
+                            <span data-lang="ar">محاضرون خبراء وممارسون في مجالاتهم.</span>
+                            <span data-lang="en" class="hidden">Expert and practicing lecturers in their fields.</span>
+                        </p>
                     </div>
                     <!-- Item 3 -->
                     <div class="card text-center reveal p-8" style="transition-delay: 300ms;">
@@ -404,16 +402,14 @@
                               <path stroke-linecap="round" stroke-linejoin="round" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                             </svg>
                         </div>
-                        <div class="text-start">
-                            <h3 class="text-xl font-bold mb-2" style="color: var(--primary-dark-blue);">
-                                <span data-lang="ar">تعلم تفاعلي</span>
-                                <span data-lang="en" class="hidden">Interactive Learning</span>
-                            </h3>
-                            <p class="text-gray-600">
-                                <span data-lang="ar">نعتمد على أساليب تعلم تفاعلية ومحاكاة واقعية لتعزيز المهارات.</span>
-                                <span data-lang="en" class="hidden">We rely on interactive learning methods and realistic simulations to enhance skills.</span>
-                            </p>
-                        </div>
+                        <h3 class="text-xl font-bold mb-2" style="color: var(--primary-dark-blue);">
+                            <span data-lang="ar">تعلم تفاعلي</span>
+                            <span data-lang="en" class="hidden">Interactive Learning</span>
+                        </h3>
+                        <p class="text-gray-600">
+                            <span data-lang="ar">تعلم تفاعلي مع محاكاة واقعية لتعزيز المهارات.</span>
+                            <span data-lang="en" class="hidden">Interactive learning with realistic simulations.</span>
+                        </p>
                     </div>
                     <!-- Item 4 -->
                     <div class="card text-center reveal p-8" style="transition-delay: 400ms;">
@@ -422,16 +418,14 @@
                               <path stroke-linecap="round" stroke-linejoin="round" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2h8a2 2 0 002-2v-1a2 2 0 012-2h1.945M7.737 10.512A4.501 4.501 0 0112 8.25c2.43 0 4.438 1.969 4.438 4.438s-1.969 4.438-4.438 4.438a4.501 4.501 0 01-4.263-2.737M6.5 21h11a2 2 0 002-2V5a2 2 0 00-2-2h-11a2 2 0 00-2 2v14a2 2 0 002 2z" />
                             </svg>
                         </div>
-                        <div class="text-start">
-                            <h3 class="text-xl font-bold mb-2" style="color: var(--primary-dark-blue);">
-                                <span data-lang="ar">شهادات معترف بها</span>
-                                <span data-lang="en" class="hidden">Recognized Certificates</span>
-                            </h3>
-                            <p class="text-gray-600">
-                                <span data-lang="ar">شهاداتنا معترف بها دوليًا وتدعم مسيرتك المهنية.</span>
-                                <span data-lang="en" class="hidden">Our certificates are internationally recognized and support your career path.</span>
-                            </p>
-                        </div>
+                        <h3 class="text-xl font-bold mb-2" style="color: var(--primary-dark-blue);">
+                            <span data-lang="ar">شهادات معترف بها</span>
+                            <span data-lang="en" class="hidden">Recognized Certificates</span>
+                        </h3>
+                        <p class="text-gray-600">
+                            <span data-lang="ar">شهادات معترف بها دوليًا وتدعم مسيرتك المهنية.</span>
+                            <span data-lang="en" class="hidden">Internationally recognized certificates.</span>
+                        </p>
                     </div>
                 </div>
             </section>
@@ -483,7 +477,7 @@
                 <p class="text-center max-w-3xl mx-auto mb-12 text-gray-600" data-lang="en" class="hidden">Welcome to Hippocrates Training Academy, where knowledge meets inspiration. Our team is a collective force of dedicated educators and experts committed to shaping the future through transformative learning experiences.</p>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
                     <div class="card reveal" style="transition-delay: 100ms;">
-                        <img src="https://i.imgur.com/3Yw9sZp.png" alt="صورة محمد البنا، المدير العام" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover" style="border: 4px solid var(--cta-green);">
+                        <img src="https://i.imgur.com/6PNDnsd.png" alt="صورة محمد البنا، المدير العام" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover" style="border: 4px solid var(--cta-green);">
                         <h3 class="text-xl font-bold">Mohammad Al-Bana</h3>
                         <p style="color: var(--primary-dark-blue);"><span data-lang="ar">المدير العام</span><span data-lang="en" class="hidden">General Director</span></p>
                     </div>
@@ -734,4 +728,5 @@
 
 </body>
 </html>
+
 
