--- a/index.html
+++ b/index.html
@@ -482,12 +482,12 @@
                         <p style="color: var(--primary-dark-blue);"><span data-lang="ar">المدير العام</span><span data-lang="en" class="hidden">General Director</span></p>
                     </div>
                     <div class="card reveal" style="transition-delay: 200ms;">
-                        <img src="https://i.imgur.com/VGkKPVv.png" alt="صورة نضال أبو سليم، مدير العلاقات العامة" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover" style="border: 4px solid var(--cta-green);">
+                        <img src="https://i.imgur.com/YDDCPa4.png" alt="صورة نضال أبو سليم، مدير العلاقات العامة" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover" style="border: 4px solid var(--cta-green);">
                         <h3 class="text-xl font-bold">Nedal Abu-Salim</h3>
                         <p style="color: var(--primary-dark-blue);"><span data-lang="ar">مدير العلاقات العامة</span><span data-lang="en" class="hidden">Public Relations Manager</span></p>
                     </div>
                     <div class="card reveal" style="transition-delay: 300ms;">
-                        <img src="https://i.imgur.com/YDDCPa4.png" alt="صورة عامر الحمدان، المدير المالي" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover" style="border: 4px solid var(--cta-green);">
+                        <img src="https://i.imgur.com/VGkKPVv.png" alt="صورة عامر الحمدان، المدير المالي" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover" style="border: 4px solid var(--cta-green);">
                         <h3 class="text-xl font-bold">Amer Al-Hamdan</h3>
                         <p style="color: var(--primary-dark-blue);"><span data-lang="ar">المدير المالي</span><span data-lang="en" class="hidden">Financial Manager</span></p>
                     </div>
